public/src/css/styles.less
@import "lib/bootstrap/bootstrap";
@import "themes/flatly";
@import (less) "lib/animate.css";
@import (less) "lib/font-awesome.min.css";
@import (less) "lib/bootstrap-social.css";
@import (less) "lib/jquery.steps.css";
@import (less) "lib/select2.css";
@import (less) "lib/select2-bootstrap.css";
@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);

@font-family: 'Montserrat', sans-serif;

//BizWallet Colors
@green: #97e8c1;
@dark-green: #18bc9c;
@light-green: #cbf7e1;
@navy: #146482;
@white: #ffffff;

//Greys
@dark-grey: #333333;
@light-grey: #808080;

// Scaffolding
// -------------------------

html, body {
  height: 100%;
  font-family: @font-family;
  color: @dark-grey;
}

h1, h2, h3, h4, h5 {
	font-family: @font-family;
}

body {
  padding-top: 100px;
}

#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  /* Negative indent footer by its height */
  margin: 0 auto -110px;
  /* Pad bottom by footer height + (optional) extra spacing */
  padding: 0 0 140px;
}

#footer {
  height: 130px;
  padding-top: 20px;
}

// Layout
// -------------------------

p {
  font-size: 125%;
}


// Navbar
// -------------------------

@navbar-height: 100px;

.navbar-default {
	background-color: @green;
  border: none;
	font-size: 24px;
  .navbar-nav .active a {
    background-color: @dark-green;
    &:hover, &:focus {
      background-color: @navy;
    }
  }
}

.navbar-nav .profile-image {
  width: 30px;
  height: 30px;
  margin: -15px 15px -15px 0;
}

.navbar-brand {
  background-image: url(../img/bizwallet-logo.png);
  background-repeat: no-repeat;
  background-size: 75px;
  background-position: left center;
  padding-left: 100px;
  margin-left: 15px;
  height: 100px;
  font-size: 24px;
}

// Landing Page
// -------------------------

.landing {
  text-align: left;
  display: inline-block;
  .title {
    margin-top: 50px;
  }
  p {
    font-size: 150%;
  }
  .subtitle {
    color: @dark-grey;
    font-size: 200%
  }
  h2 {
    font-size: 270%;
    color: @navy;
    margin: 20px 0px;
    font-weight: bold;
  }
  img {
    float: left;
    display: inline;
    margin-right: 25px;
  }
}

.landing-header, .landing-last {
  text-align: center;
  display: inline-block;
}

.landing-body-right {
  text-align: right;
  display: inline-block;
  img {
    float: right;
    margin-left: 25px;
  }
}

.title {
  color: @navy;
  font-size: 550%;
  font-weight: bold;
}

.subtitle {
  font-weight: bold;
}

// Buttons
// -------------------------

.btn {
  background-color: @dark-green;
  color: @white;
  font-size: 150%;
  margin: 20px;
  padding: 15px;
}

// Wizard
// -------------------------

.wizard .content {
  background-color: white;
  min-height: inherit;
  .body {
    position: relative !important;
  }
}

.wizard .steps ul li {
  width: auto;
  font-size: 19px;
}

.wizard {
  .actions a {
    background-color: @dark-green;
    padding: 15px 35px;
  }
  .actions {
    text-align: left;
    margin-left: 5%;
    .disabled a {
      padding: 15px 35px;
    }
  }
}

.wizard .actions a:hover {
  background-color: @navy;
  padding: 15px 35px;
}

.wizard .steps{
  margin-top: 23px;
  border-bottom: @light-grey 2px solid;
  a, a:hover {
    margin: 0 0.5em 1.2em;
  }
  .current a {
    background-color: @dark-green;
  }
  .done a {
    background-color: @green;
  }
}

.wizard .steps .done a:hover {
  background-color: @navy;
}

.body .control-label {
    font-size: 24px;
    color: @navy;
}

// Landing Page
// -------------------------
.landing {
  text-align: left;
  display: inline-block;
  .title {
    margin-top: 50px;
  }
  p {
    font-size: 150%;
  }
  .subtitle {
    color: @dark-grey;
    font-size: 200%
  }
  h2 {
    font-size: 270%;
    color: @navy;
    margin: 20px 0px;
    font-weight: bold;
  }
  img {
    float: left;
    display: inline;
    margin-right: 25px;
  }
}

.landing-header, .landing-last {
  text-align: center;
  display: inline-block;
}

.landing-body-right {
  text-align: right;
  display: inline-block;
  img {
    float: right;
    margin-left: 25px;
  }
}

.title {
  color: @navy;
  font-size: 550%;
  font-weight: bold;
}

.subtitle {
  font-weight: bold;
}

// Sign-In
// -------------------------

.subpagetitle {
    color: @navy;
    font-weight: bold;
    line-height: 1.8em;
    font-size: 250%;
    margin: 35px 0px;
    border-bottom: 2px @light-grey solid;
}

.control-label {
  font-size: 150%;
}

// Buttons
// -------------------------

.btn {
  background-color: @dark-green;
  color: @white;
  font-size: 150%;
  margin: 20px;
  padding: 15px;
  border: none;
}

// Social Buttons
// -------------------------

.btn-social {
  border-radius: 2px;
}

// Font Awesome
// -------------------------

[class^="fa-"],
[class*="fa-"] {
  margin-right: 5px;
}

// API Examples
// -------------------------

.thumb {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.thumb img {
  margin-bottom: 5px;
  margin-right: 5px;
  opacity: 0.2;
  transition: opacity 0.2s;
}

.thumb:hover img {
  opacity: 1;
  box-shadow: 0 0 3px 1px @brand-primary;
}

.facebook-caption {
  position: absolute;
  background-color: rgba(0, 0, 0, 0.5);
  font-size: 12px;
  color: #fff;
  padding: 3px;
  bottom: 25px;
}

.api-examples {
  img {
    padding-right: 10px;
  }
}

